# BSTU_6sem

./: .gitignore
AIS/: 8. ЛР Zabbix.docx  Lab1.docx  Админка3.docx  Админка4_docker.docx
AIS/AllanStyleShadowGlow/: style.cfg
AIS/new_labs/: 4.docx  5.docx
AIS/pro_ubuntu_lucid/: style.cfg
KMZI/: Лабораторная_работа_10.docx  Лабораторная_работа_11.docx  Лабораторная_работа_2.docx  Лабораторная_работа_3.docx  Лабораторная_работа_4.docx  Лабораторная_работа_5.docx  Лабораторная_работа_6.docx  Лабораторная_работа_7.docx  Лабораторная_работа_8.docx  Лабораторная_работа_9.docx  теор.docx
KMZI/Lab10/: Lab10.rar  Lab11.rar
KMZI/Lab3/: encoded-20250302175431.txt  italianText.txt
KMZI/Lab6/: Lab6.sln
KMZI/ЗИиНИС/: 1 Основные понятия и определения.ppt  11 Асимметричная криптография.ppt  1a Проблемы обеспечения технологической безопасности информационных систем.ppt  2 Информационная система.ppt  4 избыточность_коды.ppt  6 Перемежители .ppt  7-3 Презентац_ЛЗ77.ppt
MSHOAD/: docker.docx
MSHOAD/Лабы/: Lab2_MSHOAD.rar  lab20_21_теор.docx  lab24_25_теор.docx  lab26_теор.docx  lab29_теор.docx  lab30_31_теор.docx
MSHOAD/Лекции/: Л13_Cube (1).ppt  Л7_Objects.ppt  Л8_Collection.ppt  Л9_Assembly.ppt  безопасность_бд.docx
MSHOAD/Экз/: Л10_Assembly.ppt  Л11_HAT.ppt  Л12_Replication.ppt  Л13_Cube.ppt  Л14_MongoDb.ppt  Л1_Проектирование_БД.ppt  Л2_Иерархии.ppt  Л9_Functions.ppt
OKG/: Lab1.xmcd
OKG/Lab1/: Lab1_1.xmcd  Lab1_10.xmcd  Lab1_11.xmcd  Lab1_12.xmcd  Lab1_13.xmcd  Lab1_14.xmcd  Lab1_15.xmcd  Lab1_2.xmcd  Lab1_3.xmcd  Lab1_4.xmcd  Lab1_5.xmcd  Lab1_6.xmcd  Lab1_7.xmcd  Lab1_8.xmcd  Lab1_9.xmcd
OKG/Lab11/: Полином Лагранжа.docx
OKG/Lab2/: Lab2_1.xmcd  Lab2_2.xmcd
OKG/Lab4/: lab4.xmcd
OKG/Lab5/: теор.docx
OKG/Lab6/: 6.xmcd  6_1.xmcd  Проекция.docx
OKG/lab9/: ligth_color.txt  ligth_position.txt
OKG/Лабы/: ЛР_1_MCD.docx  ЛР_3_C++.docx
RIS/Lab3/: RIS_3_lab~1.sql
RIS/Lab4/: main_poller.py  source1_service.py  source2_service.py
RIS/Lab5/: data_generator.py  go.db-shm  go.db-wal  replicator.py  to1.db-shm  to1.db-wal  to2.db  to2.db-shm  to2.db-wal
RIS/Lab6/: central_db.sqlite  central_db.sqlite-shm  central_db.sqlite-wal  central_server.py  territorial1_db.sqlite  territorial2_db.sqlite  territorial2_db.sqlite-journal  territorial_client.py
RIS/Lab7/: client.js  config.json  coordinator_status.json  mediator.js  time_server.js
RIS/Лекции/: Л.3. Виды РИС.ppt
SP/: 8. ЛР Zabbix.docx  ЛР3.docx  ЛР3_2.docx
SP/Lab-02Linux/: CMakeLists.txt
SP/Lab-02Linux/Lab-02d/: CMakeLists.txt
SP/Lab-02Linux/Lab-02d-shared/: CMakeLists.txt
SP/Lab-02Linux/Lab-02d-shared/Lab-02d-shared/: Lab-02d-shared.c  text-shared.txt
SP/Lab-02Linux/Lab-02d/Lab-02d/: Lab-02d.c
SP/Lab-02Linux/Lab-02e/: CMakeLists.txt
SP/Lab-02Linux/Lab-02e/Lab-02e/: CMakeLists.txt
SP/Lab-02Linux/Lab-02e/Lab-02e/Lab-02e/: Lab-02e.c
SP/Lab-02Linux/Lab-02e/Lab-02e2/: CMakeLists.txt
SP/Lab-02Linux/Lab-02e/Lab-02e2/Lab-02e2/: Lab-02e2.c
SP/Lab1/: Лабораторная работа 1.docx  теория.docx
SP/Lab1/CMakeTask/: CMakeLists.txt
SP/Lab1/CMakeTask/Lab-01C/: CMakeLists.txt
SP/Lab1/CMakeTask/Lab-01CS/: CMakeLists.txt
SP/Lab1/CMakeTask/Lab-01CS/Lab-01CS/: Program.cs
SP/Lab2/: Lab-02d.c  Лабораторная работа2.docx  Теория_СП_2лаба.docx
SP/Lab2_cmake/Lab-02Win/: CMakeLists.txt
SP/Lab2_cmake/Lab-02Win/Lab-02a/: CMakeLists.txt
SP/Lab2_cmake/Lab-02Win/Lab-02a/Lab-02a/: Lab-02a.c  file.txt
SP/Lab2_cmake/Lab-02Win/Lab-02b/: CMakeLists.txt
SP/Lab2_cmake/Lab-02Win/Lab-02b/Lab-02b/: Lab-02b.c
SP/Lab2_cmake/Lab-02Win/Lab-02c/: CMakeLists.txt
SP/Lab2_cmake/Lab-02Win/Lab-02c/Lab-02c/: CMakeLists.txt
SP/Lab2_cmake/Lab-02Win/Lab-02c/Lab-02c/Lab-02c/: Lab-02c.c
SP/Lab2_cmake/Lab-02Win/Lab-02c/Lab-02c2/: CMakeLists.txt
SP/Lab2_cmake/Lab-02Win/Lab-02c/Lab-02c2/Lab-02c2/: Lab-02c2.c
SP/Lab3/Lab3-CMake/: CMakeLists.txt
SP/Lab3/Lab3-CMake/Lab-03b-Explicit/src/: CMakeLists.txt
SP/Lab3/Lab3-CMake/Lab-03b-Implicit/src/: CMakeLists.txt
SP/Lab3/Lab3-CMake/VAVDLib++/src/: CMakeLists.txt  VAVDLib.cpp
SP/Lab3/Lab3-CMake/VAVDLib/src/: CMakeLists.txt  VAVDLib.def
SP/Lab4/: Lab4.docx  теор.docx
SP/Lab5/: ~$рвис или служба.docx  Лабораторная работа.docx
SP/Lab5/lab5_services/: CMakeLists.txt  DemoService.c  ServiceCtl.c  config.ini
SP/Lab6/: Doc1.docx  Исключение.docx  Исключение2.docx
SP/lab5_services/: CMakeLists.txt  DemoService.c  ServiceCtl.c  config.ini  demoserviced.c  demoserviced.service
SP/Лекции/: Лекция 2 - Файлы отображенные в память.pptx  Лекция 8 - SEH.pptx
STRWP/: killnode.bat  теория.docx
STRWP/Lab06-04/: Lab06-04.js  package-lock.json
STRWP/Lab1/: Lab1-2.js  Lab1-3.js  Теория.docx
STRWP/Lab10/: ws.docx
STRWP/Lab11/: package-lock.json
TPO/: Git.docx  GitHub-Actions.pptx  Git_Act.docx
foranx/: теор.docx
Практика/: Отчёт.docx  титульник.docx
(+727 files in other folders)
