cmake_minimum_required(VERSION 3.10) 
project(ServiceLab)
set(CMAKE_C_COMPILER clang) 
set(CMAKE_CXX_COMPILER clang++)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")

if(WIN32) 
	add_executable(DemoService DemoService.c) 
	target_link_libraries(DemoService PRIVATE shlwapi shell32 advapi32) 
	add_executable(ServiceCtl ServiceCtl.c) 
	target_link_libraries(ServiceCtl PRIVATE advapi32) 
endif()

if(UNIX AND NOT APPLE) 
	find_library(INIH_LIBRARY NAMES ini inih) 
	if(NOT INIH_LIBRARY) 
		message(FATAL_ERROR "libinih not found. Please install libinih-dev.") 
	endif()
	add_executable(demoserviced demoserviced.c)
	target_link_libraries(demoserviced ${INIH_LIBRARY})
endif()